--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-vendor/
-node_modules/
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-bootstrap/cache/
-.env.*.php
-.env.php
+/node_modules
+/public/storage
+/public/hot
+/public/css/
+/public/js/
+/storage/*.key
+/vendor
+/.idea
+composer.lock
+Homestead.json
+Homestead.yaml
 .env
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
