--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "barryvdh/laravel-debugbar": "^2.3",
+        "laravelcollective/html": "^5.3.0"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
