--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /node_modules
+/public/bower_components
 /public/storage
 /public/hot
 /public/css/
 /public/js/
+/public/images/
 /storage/*.key
 /vendor
 /.idea
