--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "App/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
